--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "axios": "^0.21.1",
     "formik": "^2.2.3",
     "react": "^17.0.1",
-    "react-calendar": "^3.2.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recharts": "^2.0.8",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
