--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-calendar": "^3.1.2",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
@@ -21,6 +22,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.3",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
