--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/html2canvas": "0.0.36",
     "@types/jest": "^26.0.15",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.0.0",
     "@types/react-calendar": "^3.1.2",
     "@types/react-custom-scrollbars": "^4.0.7",
@@ -21,6 +23,8 @@
     "@types/yup": "^0.29.9",
     "axios": "^0.21.1",
     "formik": "^2.2.3",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
