--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.7.0",
+    "@fullcalendar/interaction": "^5.7.0",
+    "@fullcalendar/react": "^5.7.0",
+    "@fullcalendar/timegrid": "^5.7.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.9.1",
@@ -33,6 +37,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recharts": "^2.0.8",
+    "sweetalert2": "^11.0.8",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
