--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@fullcalendar/daygrid": "^5.7.0",
     "@fullcalendar/interaction": "^5.7.0",
     "@fullcalendar/react": "^5.7.0",
@@ -11,6 +12,7 @@
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/x-grid-data-generator": "^4.0.0-alpha.27",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,6 +29,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.3",
     "formik": "^2.2.3",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
@@ -38,6 +41,7 @@
     "react-scripts": "4.0.0",
     "recharts": "^2.0.8",
     "sweetalert2": "^11.0.8",
+    "swr": "^0.5.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
