--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-calendar": "^3.1.2",
     "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "^5.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.9",
@@ -36,6 +37,7 @@
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-pdf": "^5.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
