--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.2.3",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
+    "nanoid": "^3.1.23",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
