--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "date-fns": "^2.21.3",
     "formik": "^2.2.3",
     "html2canvas": "^1.0.0-rc.7",
+    "interactjs": "^1.10.11",
     "jspdf": "^2.3.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-calendar-timeline": "^0.27.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-pdf": "^5.3.0",
@@ -73,6 +76,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.14.2"
+    "@types/react": "^16.14.2",
+    "@types/react-calendar-timeline": "^0.26.4"
   }
 }
