--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^7.0.4",
     "recharts": "^2.0.8",
     "sweetalert2": "^11.0.8",
     "swr": "^0.5.6",
