--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.14.2",
-    "@types/react-calendar-timeline": "^0.26.4"
+    "@types/react-calendar-timeline": "^0.26.4",
+    "msw": "^0.33.0"
   }
 }
