add qcflags and qcflag to cSplel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Formik",
         "UBOM",
-        "salesreport"
+        "salesreport",
+        "qcflags",
+        "qcflag",
     ]
 }
