add qrcode and details page for device item

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "cSpell.words": [
         "Formik",
+        "Phocus",
         "UBOM",
-        "salesreport",
-        "qcflags",
         "qcflag",
+        "qcflags",
+        "salesreport"
     ]
 }
