--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jspdf": "^2.3.1",
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-calendar-timeline": "^0.27.0",
     "react-custom-scrollbars": "^4.2.1",
@@ -77,6 +78,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^16.14.2",
     "@types/react-calendar-timeline": "^0.26.4",
     "msw": "^0.33.0"
