--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-pdf": "^5.3.0",
+    "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -81,6 +82,7 @@
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "^16.14.2",
     "@types/react-calendar-timeline": "^0.26.4",
+    "@types/react-qr-reader": "^2.1.4",
     "msw": "^0.33.0"
   }
 }
