--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-scripts": "4.0.0",
     "react-toastify": "^7.0.4",
     "recharts": "^2.0.8",
+    "socket.io-client": "^4.1.3",
     "swr": "^0.5.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
