--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/interaction": "^5.7.0",
     "@fullcalendar/react": "^5.7.0",
     "@fullcalendar/timegrid": "^5.7.0",
+    "@inovua/reactdatagrid-community": "^4.4.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.9.1",
