--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-toastify": "^7.0.4",
     "recharts": "^2.0.8",
     "socket.io-client": "^4.1.3",
+    "sweetalert2": "^11.4.0",
     "swr": "^0.5.6",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
