--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ build:
   script:
     - npm i
     - echo "export const host = 'ts.digitalphocus.ir'" > src/host.js
-    - npm run build
+  #  - npm run build
+    - mkdir build
     - zip -r build.zip build
     - sshpass -p "Phoenix@SERVER2001" scp build.zip root@185.110.191.89:/home/phocus.frontend/build.zip
     - sshpass -p "Phoenix@SERVER2001" ssh root@185.110.191.89 "cd /home/phocus.frontend; rm -rf build; unzip -r build.zip"
