gitlab ci test 8

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,10 @@ build:
     - ls
     - which ssh
     - which scp
-    - sshpass -p "Phoenix@SERVER2001" scp build.zip root@185.110.191.89:/home/phocus.frontend/build.zip
+    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+    - eval $(ssh-agent -s)
+    - ssh-add <(echo "$SSH_PRIVATE_KEY")
+    - mkdir -p ~/.ssh
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - scp build.zip root@185.110.191.89:/home/phocus.frontend/build.zip
     - sshpass -p "Phoenix@SERVER2001" ssh root@185.110.191.89 "cd /home/phocus.frontend; rm -rf build; unzip -r build.zip"
