--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
     - apt-get -qq update && apt-get -qq install -y zip unzip sshpass
   script:
     - npm i
-    - echo "export const host = 'ts.digitalphocus.ir'" > src/host.js
+    - echo "export const host = 'https://ts.digitalphocus.ir'" > src/host.ts
     - NODE_OPTIONS=--max_old_space_size=1000; npm run build
     - mkdir build
     - zip -r build.zip build
@@ -26,4 +26,4 @@ build:
     - mkdir -p ~/.ssh
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - scp build.zip root@185.110.191.89:/home/phocus.frontend/build.zip
-    - ssh root@185.110.191.89 "cd /home/phocus.frontend; rm -rf build; unzip build.zip"
+    - ssh root@185.110.191.89 "cd /home/phocus.frontend; rm -rf build; unzip -A build.zip"
