comment before script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ build:
   # rules:
   #   - changes:
   #     - src/*
-  before_script:
-    - apt-get -qq update && apt-get -qq install -y zip unzip sshpass
-    - npm i
+  # before_script:
+  #   - apt-get -qq update && apt-get -qq install -y zip unzip sshpass
+  #   - npm i
   script:
     # - echo "export const host = 'https://ts.digitalphocus.ir'" > src/host.ts
     # - NODE_OPTIONS=--max_old_space_size=1000; npm run build
