--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open",
+    "cypress:all": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -89,6 +91,7 @@
     "@types/react": "^16.14.2",
     "@types/react-calendar-timeline": "^0.26.4",
     "@types/react-qr-reader": "^2.1.4",
+    "cypress": "^9.5.2",
     "msw": "^0.33.0"
   }
 }
