--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress": "cypress open",
-    "cypress:all": "cypress run"
+    "cypress:all": "cypress run",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -92,6 +93,7 @@
     "@types/react-calendar-timeline": "^0.26.4",
     "@types/react-qr-reader": "^2.1.4",
     "cypress": "^9.5.2",
-    "msw": "^0.33.0"
+    "msw": "^0.33.0",
+    "source-map-explorer": "^2.5.2"
   }
 }
