--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.29.1",
     "nanoid": "^3.1.23",
     "qrcode.react": "^1.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-calendar-timeline": "^0.27.0",
     "react-custom-scrollbars": "^4.2.1",
