--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 --openssl-legacy-provider start",
+    "start": "react-scripts --max_old_space_size=4096  start",
     "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
